# tf

./: .env.template  .gitignore  README.md  app-new.py  app.py  pyproject.toml  requirements.txt
parsers/: image_extract.py  images.py  pdf.py  plaintexts.py  postprocessors.py  tables.py  utilities.py
utils/: streamlit.py
