[tool.poetry]
name = "chunky"
version = "0.1.0"
description = ""
authors = ["wjlee <wjlee.ling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
unstructured = {extras = ["all-docs"], version = "^0.13.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
