[tool.poetry]
name = "chunky"
version = "0.1.0"
description = ""
authors = ["wjlee <wjlee.ling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# unstructured = {extras = ["all-docs"], version = "^0.13.3"}
pymupdf = "^1.24.2"
# rank-bm25 = "^0.2.2"
# pymupdf4llm = "^0.0.1"
tika = "^2.6.0"
pdfplumber = "^0.11.0"
tqdm = "^4.66.4"
pandas = "^2.2.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
