[tool.poetry]
name = "chunky"
version = "0.1.0"
description = ""
authors = ["wjlee <wjlee.ling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pdfplumber = "^0.11.0"
tabula-py = "^2.9.3"
tqdm = "^4.66.4"
pandas = "^2.2.2"
tabulate = "^0.9.0"
streamlit = "^1.35.0"
streamlit-drawable-canvas = "^0.9.3"
mitosheet = "^0.1.575"
streamlit-quill = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
